# QZ-Backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/controllers/: attempt.py  auth.py  profile.py
app/middleware/: role.py
app/models/: user.py
app/routes/: attempt.py  profile.py  quiz.py
app/schemas/: attempt.py  user.py
