[project]
name = "quiz-backend"
version = "0.1.0"
description = "Quiz Builder API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "python-dotenv",
    "bcrypt",
    "python-jose[cryptography]",
    "pydantic[email]",
    "pymongo[srv]",
    "certifi",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]